--- a/app-of-apps/app-platform-opensearch-dashboards.yaml
+++ b/app-of-apps/app-platform-opensearch-dashboards.yaml
@@ -1,32 +1,33 @@
-# path: platform/logging/opensearch-dashboards-app.yaml
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: opensearch-dashboards
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "5" # Waits for OpenSearch Cluster (Wave 4)
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   project: default
   
   sources:
-    # SOURCE 1: Git Repository (The Values Provider & Manifest Deployer)
-    - repoURL: 'https://github.com/Pheonix-Hotel-Reservation/pheonix-booking-config-repo.git'
-      targetRevision: main
+    # SOURCE 1: Git Repository (The Values Provider)
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
       ref: values
-      path: platform/logging
-      directory:
-        # Deploys the VirtualService along with the Helm chart deployment
-        include: 'opensearch-ingress.yaml' 
         
     # SOURCE 2: Helm Chart (The Dashboards Chart)
     - repoURL: https://opensearch-project.github.io/helm-charts/
       targetRevision: 3.3.0
-      chart: opensearch-dashboards # <--- The separate UI chart
+      chart: opensearch-dashboards
       helm:
         valueFiles:
           - $values/platform/logging/opensearch-dashboards-values.yaml
+
+    # SOURCE 3: Git Repository (Ingress)
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
+      path: platform/logging
+      directory:
+        include: 'opensearch-ingress.yaml'
 
   destination:
     server: https://kubernetes.default.svc
@@ -36,4 +37,4 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-      - CreateNamespace=false # Namespace already created by OpenSearch Cluster App
+      - CreateNamespace=false
