--- a/app-of-apps/app-platform-fluentbit.yaml
+++ b/app-of-apps/app-platform-fluentbit.yaml
@@ -1,23 +1,21 @@
-# path: platform/logging/fluentbit-app.yaml
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: fluentbit
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "6" # Runs after all other infrastructure (OpenSearch is Wave 4/5)
+    argocd.argoproj.io/sync-wave: "6"
 spec:
   project: default
   sources:
     # SOURCE 1: Git Repository (Value Provider)
-    - repoURL: 'https://github.com/Pheonix-Hotel-Reservation/pheonix-booking-config-repo.git'
-      targetRevision: main
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
       ref: values
       
     # SOURCE 2: Helm Chart (Fluent Bit)
     - repoURL: https://fluent.github.io/helm-charts
-      targetRevision: 0.54.0 # Use a stable version
+      targetRevision: 0.54.0
       chart: fluent-bit
       helm:
         valueFiles:
@@ -25,7 +23,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: monitoring # Deploy Fluent Bit into the 'monitoring' namespace
+    namespace: monitoring
   syncPolicy:
     automated:
       prune: true
