--- a/app-of-apps/app-platform-harbor.yaml
+++ b/app-of-apps/app-platform-harbor.yaml
@@ -1,34 +1,36 @@
-# platform/registry/harbor-app.yaml
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: harbor
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "7" # Critical: Deploy after Observability
+    argocd.argoproj.io/sync-wave: "7"
 spec:
   project: default
   sources:
     # Official Harbor Helm Chart Repository
     - repoURL: https://helm.goharbor.io
-      targetRevision: 1.18.0 # Pin a stable version
+      targetRevision: 1.18.0
       chart: harbor
       helm:
         valueFiles:
           - $values/platform/registry/harbor-values.yaml
           
     # Git Repo (Value Provider)
-    - repoURL: 'https://github.com/Pheonix-Hotel-Reservation/pheonix-booking-config-repo.git'
-      targetRevision: main
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
       ref: values
+
+    # Git Repo (Cert)
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
       path: platform/registry
       directory:
         include: harbor-cert.yaml
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: harbor # Dedicated namespace
+    namespace: harbor
   syncPolicy:
     automated:
       prune: true
