--- a/app-of-apps/app-platform-vault.yaml
+++ b/app-of-apps/app-platform-vault.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -9,25 +8,25 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: 'https://github.com/Pheonix-Hotel-Reservation/pheonix-booking-config-repo.git'   # <-- replace with your repo URL
-      targetRevision: main
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
       ref: values
     
     - repoURL: https://helm.releases.hashicorp.com
       chart: vault
-      targetRevision: "0.31.0"   # pin the chart version you want
+      targetRevision: "0.31.0"
       helm:
         valueFiles:
           - $values/platform/vault/values.vault.base.yaml
 
-    - repoURL: 'https://github.com/Pheonix-Hotel-Reservation/pheonix-booking-config-repo.git'
-      targetRevision: main
+    - repoURL: https://github.com/theenuka/pheonix-booking-config-repo.git
+      targetRevision: master
       path: platform/vault
       directory:
         include: 'ingress.yaml'
 
   destination:
-    server: 'https://kubernetes.default.svc'
+    server: https://kubernetes.default.svc
     namespace: vault
   syncPolicy:
     automated:
