Add initContainer to fix SonarQube volume permissions

--- a/platform/sonarqube/sonarqube.yaml
+++ b/platform/sonarqube/sonarqube.yaml
@@ -31,6 +31,17 @@ spec:
       labels:
         app: sonarqube
     spec:
+      initContainers:
+      - name: fix-permissions
+        image: busybox
+        command: ["sh", "-c", "chown -R 1000:1000 /opt/sonarqube/data /opt/sonarqube/extensions /opt/sonarqube/logs"]
+        volumeMounts:
+        - name: sonarqube-data
+          mountPath: /opt/sonarqube/data
+        - name: sonarqube-extensions
+          mountPath: /opt/sonarqube/extensions
+        - name: sonarqube-logs
+          mountPath: /opt/sonarqube/logs
       containers:
       - name: sonarqube
         image: sonarqube:lts-community
