Switch SonarQube ingress to instance mode and Service to NodePort

--- a/platform/sonarqube/sonarqube.yaml
+++ b/platform/sonarqube/sonarqube.yaml
@@ -12,7 +12,7 @@ spec:
     protocol: TCP
   selector:
     app: sonarqube
-  type: ClusterIP
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
