--- a/apps/hotel-reservation/03-hotel.yaml
+++ b/apps/hotel-reservation/03-hotel.yaml
@@ -13,11 +13,9 @@ spec:
       labels:
         app: hotel-service
     spec:
-      imagePullSecrets:
-      - name: ecr-registry-secret
       containers:
       - name: hotel-service
-        image: 787169320414.dkr.ecr.us-east-1.amazonaws.com/phoenix-hotel-service:asgardeo-distfix-20251120
+        image: ttl.sh/phoenix-hotel-hotel-service-v1:2h
         ports:
         - containerPort: 7103
         envFrom:
