feat: Switch to AWS ALB Ingress for Harbor and Istio

--- a/app-of-apps/app-platform-istio-applications.yaml
+++ b/app-of-apps/app-platform-istio-applications.yaml
@@ -96,7 +96,7 @@ spec:
       targetRevision: master
       path: platform/istio
       directory:
-        include: '{certificate.yaml,gateway.yaml,jwt-validation-policy.yaml}'
+        include: '{certificate.yaml,gateway.yaml,jwt-validation-policy.yaml,alb-ingress.yaml}'
 
 
   destination:
