--- a/apps/hotel-reservation/06-notification.yaml
+++ b/apps/hotel-reservation/06-notification.yaml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   name: notification-service
   namespace: phoenix-app
+  labels:
+    app.kubernetes.io/name: notification-service
+    app.kubernetes.io/part-of: hotel-reservation
 spec:
   replicas: 1
   selector:
@@ -12,21 +15,81 @@ spec:
     metadata:
       labels:
         app: notification-service
+        app.kubernetes.io/name: notification-service
+        app.kubernetes.io/part-of: hotel-reservation
+      annotations:
+        sidecar.istio.io/inject: "true"
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "7101"
+        prometheus.io/path: "/metrics"
+        fluentbit.io/parser: json
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
+        runAsNonRoot: true
       containers:
       - name: notification-service
         image: ttl.sh/phoenix-hotel-notification-service-v1:2h
         ports:
         - containerPort: 7101
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+        livenessProbe:
+          tcpSocket:
+            port: 7101
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        readinessProbe:
+          tcpSocket:
+            port: 7101
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        env:
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://otel-collector.observability:4317
+        - name: OTEL_SERVICE_NAME
+          value: notification-service
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: service.namespace=phoenix-app,service.name=notification-service,deployment.environment=prod
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: notification-service
   namespace: phoenix-app
+  labels:
+    app: notification-service
 spec:
   selector:
     app: notification-service
   ports:
   - port: 80
     targetPort: 7101
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: notification-service
+  namespace: phoenix-app
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: notification-service
+  minReplicas: 1
+  maxReplicas: 5
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 70
