--- a/platform/registry/harbor-values.yaml
+++ b/platform/registry/harbor-values.yaml
@@ -1,14 +1,21 @@
 # platform/registry/harbor-values.yaml
 expose:
-  type: loadBalancer
+  type: ingress
+  ingress:
+    hosts:
+      core: registry.pheonix.live
+    controller: default
+    className: alb
+    annotations:
+      alb.ingress.kubernetes.io/scheme: internet-facing
+      alb.ingress.kubernetes.io/target-type: ip
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+      # If you have a certificate, uncomment and add ARN:
+      # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
+      # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123456789012:certificate/uuid
   tls:
-    enabled: true
-    certSource: secret
-    secret:
-      secretName: "harbor-registry-tls"
-      notarySecretName: "harbor-registry-tls"
-  loadBalancer:
-    name: harbor
+    enabled: false # Disable internal TLS since ALB handles it (or we use HTTP)
+
 
 externalURL: https://registry.pheonix.live
 
