--- a/apps/hotel-reservation/00-namespace.yaml
+++ b/apps/hotel-reservation/00-namespace.yaml
@@ -2,3 +2,11 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: phoenix-app
+  labels:
+    istio-injection: enabled
+    goldilocks.fairwinds.com/enabled: "true"
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
+  annotations:
+    configmanagement.gke.io/cluster-selector: phoenix-app
