--- a/apps/hotel-reservation/01-mongodb.yaml
+++ b/apps/hotel-reservation/01-mongodb.yaml
@@ -1,9 +1,11 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mongodb
   namespace: phoenix-app
 spec:
+  serviceName: "mongodb"
+  replicas: 1
   selector:
     matchLabels:
       app: mongodb
@@ -11,21 +13,71 @@ spec:
     metadata:
       labels:
         app: mongodb
+        app.kubernetes.io/name: mongodb
+        app.kubernetes.io/part-of: hotel-reservation
+      annotations:
+        sidecar.istio.io/inject: "true"
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9216"
+        prometheus.io/path: "/metrics"
     spec:
+      securityContext:
+        runAsUser: 1001
+        runAsGroup: 1001
+        fsGroup: 1001
+        runAsNonRoot: true
       containers:
       - name: mongodb
         image: mongo:6.0
         ports:
         - containerPort: 27017
+        livenessProbe:
+          tcpSocket:
+            port: 27017
+          initialDelaySeconds: 20
+          periodSeconds: 20
+        readinessProbe:
+          exec:
+            command: ["mongosh", "--quiet", "--eval", "db.runCommand({ ping: 1 })"]
+          initialDelaySeconds: 10
+          periodSeconds: 15
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "200m"
+          limits:
+            memory: "1Gi"
+            cpu: "1000m"
+        env:
+        - name: OTEL_SERVICE_NAME
+          value: mongodb
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://otel-collector.observability:4317
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: service.namespace=phoenix-app,service.name=mongodb,deployment.environment=prod
+        volumeMounts:
+        - name: mongodb-data
+          mountPath: /data/db
+  volumeClaimTemplates:
+  - metadata:
+      name: mongodb-data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 5Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
   namespace: phoenix-app
+  labels:
+    app: mongodb
 spec:
   selector:
     app: mongodb
   ports:
   - port: 27017
     targetPort: 27017
+  clusterIP: None
