--- a/apps/hotel-reservation/03-hotel.yaml
+++ b/apps/hotel-reservation/03-hotel.yaml
@@ -3,25 +3,63 @@ kind: Deployment
 metadata:
   name: hotel-service
   namespace: phoenix-app
+  labels:
+    app.kubernetes.io/name: hotel-service
+    app.kubernetes.io/part-of: hotel-reservation
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: hotel-service
   template:
+        app.kubernetes.io/name: hotel-service
+        app.kubernetes.io/part-of: hotel-reservation
+      annotations:
+        sidecar.istio.io/inject: "true"
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "7103"
+        prometheus.io/path: "/metrics"
+        fluentbit.io/parser: json
     metadata:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
+        runAsNonRoot: true
       labels:
         app: hotel-service
     spec:
       containers:
       - name: hotel-service
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+        livenessProbe:
+          tcpSocket:
+            port: 7103
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        readinessProbe:
+          tcpSocket:
+            port: 7103
+          initialDelaySeconds: 5
+          periodSeconds: 10
         image: ttl.sh/phoenix-hotel-hotel-service-v1:2h
         ports:
         - containerPort: 7103
         envFrom:
         - configMapRef:
             name: asgardeo-config
-        env:
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: http://otel-collector.observability:4317
+        - name: OTEL_SERVICE_NAME
+          value: hotel-service
+        - name: OTEL_RESOURCE_ATTRIBUTES
+          value: service.namespace=phoenix-app,service.name=hotel-service,deployment.environment=prod
         - name: MONGODB_CONNECTION_STRING
           value: "mongodb://mongodb:27017/hotel-booking"
 ---
@@ -30,9 +68,33 @@ kind: Service
 metadata:
   name: hotel-service
   namespace: phoenix-app
+  labels:
+    app: hotel-service
 spec:
   selector:
     app: hotel-service
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 7103
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: hotel-service
+  namespace: phoenix-app
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: hotel-service
+  minReplicas: 1
+  maxReplicas: 5
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 70
