Fix: Switch ALB to instance mode and Service to NodePort for CNI compatibility

--- a/platform/istio/alb-ingress.yaml
+++ b/platform/istio/alb-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: istio-ingress
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
     alb.ingress.kubernetes.io/healthcheck-port: "15021"
