Fix: Update hotel-gateway selector to match istio-ingress pod label

--- a/apps/hotel-reservation/10-istio-gateway.yaml
+++ b/apps/hotel-reservation/10-istio-gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: phoenix-app
 spec:
   selector:
-    istio: ingressgateway # use istio default controller
+    istio: ingress # use istio default controller
   servers:
   - port:
       number: 80
