Fix: Switch Harbor Ingress to instance mode and Services to NodePort

--- a/platform/registry/harbor-values.yaml
+++ b/platform/registry/harbor-values.yaml
@@ -8,8 +8,16 @@ expose:
     className: alb
     annotations:
       alb.ingress.kubernetes.io/scheme: internet-facing
-      alb.ingress.kubernetes.io/target-type: ip
+      alb.ingress.kubernetes.io/target-type: instance
       alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+
+portal:
+  service:
+    type: NodePort
+
+core:
+  service:
+    type: NodePort
 
 externalURL: http://k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com
 
