Fix: Remove host from SonarQube Ingress to allow ALB DNS access

--- a/platform/sonarqube/ingress.yaml
+++ b/platform/sonarqube/ingress.yaml
@@ -11,8 +11,8 @@ metadata:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
   rules:
-    - host: sonar.pheonix.live
-      http:
+    # - host: sonar.pheonix.live
+    - http:
         paths:
           - path: /
             pathType: Prefix
