--- a/platform/sonarqube/sonarqube.yaml
+++ b/platform/sonarqube/sonarqube.yaml
@@ -52,10 +52,10 @@ spec:
           value: "true"
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "512Mi"
+            cpu: "200m"
           limits:
-            memory: "2Gi"
+            memory: "1.5Gi"
             cpu: "1000m"
         volumeMounts:
         - name: sonarqube-data
