--- a/apps/hotel-reservation/02-identity.yaml
+++ b/apps/hotel-reservation/02-identity.yaml
@@ -34,6 +34,8 @@ spec:
         runAsGroup: 3000
         fsGroup: 2000
         runAsNonRoot: true
+      imagePullSecrets:
+        - name: regcred
       containers:
         - name: identity-service
           image: k8s-harbor-harborin-04b31170bb-1679859835.us-east-1.elb.amazonaws.com/phoenix-project/phoenix-identity-service:5a960badd374e01bced430311978d97f155104f2
