--- a/apps/hotel-reservation/03-hotel.yaml
+++ b/apps/hotel-reservation/03-hotel.yaml
@@ -29,6 +29,8 @@ spec:
         runAsGroup: 3000
         fsGroup: 2000
         runAsNonRoot: true
+      imagePullSecrets:
+        - name: regcred
       containers:
         - name: hotel-service
           resources:
