--- a/platform/monitoring/kiali-ingress.yaml
+++ b/platform/monitoring/kiali-ingress.yaml
@@ -1,32 +1,24 @@
 # path: platform/monitoring/kiali-ingress.yaml
 
-apiVersion: networking.istio.io/v1beta1
-kind: VirtualService
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: kiali-vs
+  name: kiali-ingress
   namespace: monitoring
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/subnets: subnet-0a6bf732901bb35e8, subnet-066b28455fe0a88d1
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
-  hosts:
-    - "kiali.pheonix.live"
-  gateways:
-    - istio-ingress/main-gateway
-  http:
-  # 1. Redirect HTTP to HTTPS
-  - match:
-    - uri:
-        prefix: /
-      port: 80
-    redirect:
-      scheme: https
-      port: 443
-  
-  # 2. Route HTTPS traffic to Kiali Service
-  - match:
-    - uri:
-        prefix: /
-    route:
-    - destination:
-        # Default Kiali service name
-        host: kiali.monitoring.svc.cluster.local 
-        port:
-          number: 20001 # The port Kiali is configured to listen on
+  ingressClassName: alb
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: kiali
+                port:
+                  number: 20001
