Increase OpenSearch memory limits to prevent OOMKilled

--- a/platform/logging/opensearch-values.yaml
+++ b/platform/logging/opensearch-values.yaml
@@ -9,13 +9,13 @@ persistence:
   
 resources:
   requests:
-    cpu: 100m
-    memory: 256Mi
-  limits:
     cpu: 500m
-    memory: 512Mi
+    memory: 1Gi
+  limits:
+    cpu: 1000m
+    memory: 2Gi
 
-opensearchJavaOpts: "-Xms256m -Xmx256m"
+opensearchJavaOpts: "-Xms1g -Xmx1g"
 
 extraEnvs:
   - name: OPENSEARCH_INITIAL_ADMIN_PASSWORD
